@@ -1,5 +1,10 @@
 2014-02-10  Corinna Vinschen  <corinna@vinschen.de>
 
+	* uinfo.cc (pwdgrp::fetch_account_from_windows): Add code to allow
+	setting the primary group from the SAM comment field.
+
+2014-02-10  Corinna Vinschen  <corinna@vinschen.de>
+
 	* dcrt0.cc (child_info_spawn::handle_spawn): Call fixup_lockf_after_exec
 	with additional argument to specify if the process has been execed
 	or spawned.
